added all required files and changed essential ones

--- a/views/pages/blog.ejs
+++ b/views/pages/blog.ejs
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-   <%- include('partials/navbar.ejs',{isLoggedIn:login}) %>
+   <%- include('../partials/navbar.ejs',{isLoggedIn:login}) %>
 
    <section class="newsection" id="newsection">
       <h2 class="heading"><span>BLOGS</span></h2>
@@ -61,7 +61,7 @@
       </div>
    </section>
 
-   <%- include('partials/footer.ejs') %>
+   <%- include('../partials/footer.ejs') %>
 
 </body>
 </html>
