--- a/views/pages/dash.ejs
+++ b/views/pages/dash.ejs
@@ -14,7 +14,7 @@
 
 <body>
 
-  <%- include('partials/navbar.ejs',{isLoggedIn:true}) %>
+  <%- include('../partials/navbar.ejs',{isLoggedIn:true}) %>
 
   <div class="sidebar">
     <div class="logo-details">
@@ -225,7 +225,7 @@
     });
   </script>
 
-  <%- include('partials/footer.ejs') %>
+  <%- include('../partials/footer.ejs') %>
 
 </body>
 
