--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-   <%- include('partials/navbar.ejs',{isLoggedIn:true}) %>
+   <%- include('../partials/navbar.ejs',{isLoggedIn:true}) %>
 
    <section class="home" id="home">
       <div class="home-content">
@@ -259,7 +259,7 @@
    </div>
 
    <!-- footer design -->
-   <%- include('partials/footer.ejs') %>
+   <%- include('../partials/footer.ejs') %>
 
    <!-- swiper-css -->
 
