--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -16,24 +16,38 @@
 
     <footer class="bg-white dark:bg-gray-900">
         <div class="mx-auto w-full container">
-            <div class="grid grid-cols-2 gap-8 px-6 py-8 md:grid-cols-3 text-center justify-center content-center">
+            <div class="grid grid-cols-2 gap-8 px-6 py-8 md:grid-cols-4">
                 <div>
-                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Domains</h2>
+                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Company</h2>
                     <ul class="text-gray-500 dark:text-gray-400 font-medium">
                         <li class="mb-4">
-                            <a href="/domains/pt" class=" hover:underline">Programming and Tech</a>
+                            <a href="#" class=" hover:underline">About</a>
                         </li>
                         <li class="mb-4">
-                            <a href="/domains/gd" class="hover:underline">Graphics and Design</a>
+                            <a href="#" class="hover:underline">Careers</a>
                         </li>
                         <li class="mb-4">
-                            <a href="/domains/cdw" class="hover:underline">Content and Digital writing</a>
+                            <a href="#" class="hover:underline">Brand Center</a>
                         </li>
                         <li class="mb-4">
-                            <a href="/domains/va" class="hover:underline">Video and Animation</a>
+                            <a href="#" class="hover:underline">Blog</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Help center</h2>
+                    <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                        <li class="mb-4">
+                            <a href="#" class="hover:underline">Discord Server</a>
                         </li>
                         <li class="mb-4">
-                            <a href="/domains/dm" class="hover:underline">Digital Marketing</a>
+                            <a href="#" class="hover:underline">Twitter</a>
+                        </li>
+                        <li class="mb-4">
+                            <a href="#" class="hover:underline">Facebook</a>
+                        </li>
+                        <li class="mb-4">
+                            <a href="#" class="hover:underline">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -44,25 +58,34 @@
                             <a href="#" class="hover:underline">Privacy Policy</a>
                         </li>
                         <li class="mb-4">
+                            <a href="#" class="hover:underline">Licensing</a>
+                        </li>
+                        <li class="mb-4">
                             <a href="#" class="hover:underline">Terms &amp; Conditions</a>
                         </li>
                     </ul>
                 </div>
                 <div>
-                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Community</h2>
+                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Download</h2>
                     <ul class="text-gray-500 dark:text-gray-400 font-medium">
                         <li class="mb-4">
-                            <a href="/forum" class="hover:underline">Community</a>
+                            <a href="#" class="hover:underline">iOS</a>
                         </li>
                         <li class="mb-4">
-                            <a href="/blogs" class="hover:underline">Blogs</a>
+                            <a href="#" class="hover:underline">Android</a>
+                        </li>
+                        <li class="mb-4">
+                            <a href="#" class="hover:underline">Windows</a>
+                        </li>
+                        <li class="mb-4">
+                            <a href="#" class="hover:underline">MacOS</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="px-4 py-6 bg-gray-100 dark:bg-gray-700 md:flex md:items-center md:justify-between">
                 <span class="text-sm text-gray-500 dark:text-gray-300 sm:text-center">© 2023 <a
-                        href="/">Lancify™</a>. All Rights Reserved.
+                        href="https://flowbite.com/">Flowbite™</a>. All Rights Reserved.
                 </span>
                 <div class="flex mt-4 space-x-6 sm:justify-center md:mt-0">
                     <a href="#" class="text-gray-400 hover:text-gray-900 dark:hover:text-white">
