--- a/public/css/home2.css
+++ b/public/css/home2.css
@@ -1,30 +1,291 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+}
 
 body {
   font-family: "Montserrat", sans-serif;
+  background-color: #425e5e;
 }
 
-.foot ul li a {
-  color: #fafafa;
-  opacity: 0.7;
+.lancify {
+  color: #41905f;
+  padding-left: 50px;
+  font-size: 30px;
+  line-height: 80px;
 }
 
-.foot a:hover {
-  text-decoration: underline;
+.orders:hover {
+  color: #41905f;
+  cursor: pointer;
 }
 
-.foot {
-  /* display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); */
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 100px 150px;
-  background-color: #4B6666;
-  color: #d9dfdc;
-}
-
-.foot ul li {
-  text-decoration: none;
-  list-style: none;
+.trend {
   padding-top: 20px;
+}
+
+.content {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  padding: 20px;
+  padding-top: 50px;
+}
+
+.content h3 {
+  padding-bottom: 20px;
+}
+
+.sub_menu1,
+.sub_menu2,
+.sub_menu3 {
+  display: none;
+  /* transition: 1s ease-in-out; */
+}
+
+.pop {
+  color: #425e5e;
+  text-indent: 20px;
+}
+
+img {
+  width: 300px;
+  height: 250px;
+  border-radius: 10px;
+}
+
+.boxes {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 30px;
+  max-width: 1000px;
+  margin: 10px auto;
+}
+
+.box1,
+.box2,
+.box3,
+.box4,
+.box5,
+.box6 {
+  max-width: 300px;
+  /* margin-top: 0; */
+  border-radius: 10px;
+  box-shadow: 3px 5px 5px rgba(1, 1, 1, 0.5);
+  transition: 0.3s ease-in-out;
+  background-color: aliceblue;
+}
+
+.box1:hover,
+.box2:hover,
+.box3:hover,
+.box4:hover,
+.box5:hover,
+.box6:hover {
+  /* transform: scale(1.05); */
+  box-shadow: 3px 5px 5px rgba(136, 237, 207, 0.7);
+  transition: 0.3s ease-in-out;
+}
+
+/* carousel */
+.containerP {
+  position: relative;
+  height: 750px;
+  width: 1070px;
+  display: flex;
+  align-items: center;
+  background: rgba(1, 1, 1, 0.5);
+}
+
+.swiper-pagination-bullet {
+  display: none;
+  visibility: hidden;
+}
+
+.w3-xlarge {
+  text-align: center;
+  padding: 50px;
+  color: #425e5e;
+  font-size: 50px;
+}
+
+.w3-xlarge a {
+  color: #425e5e;
+  text-decoration: none;
+  padding: 20px;
+}
+
+.w3-xlarge i:hover {
+  transform: translateY(0, -10px);
+
+}
+
+.more {
+  padding-top: 20px;
+  padding-bottom: -20px;
+  text-align: center;
+  font-size: 50px;
+  color: #425e5e;
+}
+
+.card .image {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+
+}
+
+.card .image img {
+  width: 100%;
+  height: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.card {
+  position: relative;
+  background: black;
+  border: 4px solid #2eaf7d;
+  border-radius: 20px;
+  width: 280px;
+  height: 350px;
+}
+
+.card .card-content {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 30px;
+
+}
+
+.card .social-media {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card .social-media i {
+  color: #fff;
+  margin-top: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.card social-media i:hover {
+  color: #2eaf7d;
+}
+
+.card .name-profession {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10px;
+  color: #fff;
+}
+
+.name-profession .name {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.name-profession .profession {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.card .rating {
+  display: flex;
+  align-items: center;
+  margin-top: 18px;
+}
+
+.card .rating i {
+  font-size: 18px;
+  color: #2eaf7d;
+  margin: 0 2px;
+}
+
+.card .button {
+  display: flex;
+  justify-content: space-around;
+  width: 110%;
+  margin-top: 20px;
+}
+
+.card .button button {
+  background: #2eaf7d;
+  border: none;
+  outline: none;
+  color: #000;
+  font-weight: 600;
+  padding: 8px 22px;
+  border-radius: 20px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.card .button button:hover {
+  background: #fff;
+}
+
+.get_started {
+  background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url("/images/developer.png");
+  /* background-image:  linear-gradient(rgba(255, 255, 255, 0.904)), url("/images/developer.png"); */
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  padding: 25px;  
+}
+
+.get_started img {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.get_started .content {
+  align-items: center;
+  align-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.get_started .content h1 {
+  color: #034a38;
+  font-weight: 900;
+  font-size: xx-large;
+  padding-right: 30px;
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
+.get_started .content a {
+  color: white;
+  background: #2eaf7d;
+  padding: 10px;
+  border-radius: 10px;
+  text-align: center;
+
+}
+
+.get_started .content a:hover {
+  background: #425e5e;
+  color: white;
+  transition: 0.5s;
 }
