--- a/views/pages/community.ejs
+++ b/views/pages/community.ejs
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <%- include('partials/navbar.ejs',{isLoggedIn:login}) %>
+    <%- include('../partials/navbar.ejs',{isLoggedIn:login}) %>
 
     <div class="container py-5 px-4">
         <!-- For demo purpose-->
@@ -204,6 +204,6 @@
         </div>
       </div>
 
-      <%- include('partials/footer.ejs') %>
+      <%- include('../partials/footer.ejs') %>
 </body>
 </html>
