--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -9,12 +9,12 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <title> My CSS Website</title>
+  <title> Lancify </title>
   <link rel="stylesheet" href="/css/home.css" type="text/css">
 </head>
 
 <body>
-  <%- include('partials/navbar.ejs',{isLoggedIn: loggedIn}) %>
+  <%- include('../partials/navbar.ejs',{isLoggedIn: loggedIn}) %>
 
   <div class="container" id="section-1-gradient">
     <div class="inside-container">
@@ -112,7 +112,7 @@
 
       </div>
 
-      <%- include('partials/footer.ejs') %>
+      <%- include('../partials/footer.ejs') %>
       
       <script>
         function dropdownmenu() {
