--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	<%- include('partials/navbar.ejs',{isLoggedIn:login}) %>
+	<%- include('../partials/navbar.ejs',{isLoggedIn:login}) %>
 
 	<div class="root">
 		<section class="carousel mycarousel">
@@ -328,7 +328,7 @@
 		
 	</div>
 
-	<%- include('partials/footer.ejs') %>
+	<%- include('../partials/footer.ejs') %>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
